nomacs 3.12.0
=============
- recent files panel renewed
- improved dropping for thumbnail preview (copy/move/link)
- LAN client removed
- batch: original filename is added to the metadata 
- frameless: multi-screen setup improved
- SVG: resulting image size can be adjusted when converting 
- bug fixes
- Updates
	- quazip 0.7.6
	- libraw 0.18
	- exiv2 3.3.2

nomacs 3.10.0
=============
- anti-aliasing improved
- printing improved
- print multiple pages from thumbnail preview
- animiated WebP support
- JPG compressed TIFFs supported
- batch cropping added
- PSD lib updated
- new translations: Bosnian, Croation, and Serbian
- Updates (Windows)
	- Qt 5.9.3 -> 5.11.0
	- OpenCV 3.3.1 -> 3.4.1

nomacs 3.8.0
============
- Full PhaseOne Support (Monochrome)
- RAW loader optimized (less RAM & speed-up)
- RAW loading improved (pink pixels reduced)
- MSI installer
- Drag&Drop fixes
- Batch resizing fixed
- Minor bug fixes

- Drag & Drop fixed
- Batch resize fixed
- GPS link fixed
- Translation downloader fixed

nomacs 3.6.1
============
- translations fixed
- LibRaw 0.17.0 -> 0.18.2
- bug reporting moved to github

nomacs 3.6.0
============
- Image adjustments introduced
- Exposure added
- Batch
	- Improved profiles
	- Image adjustments added
	- Settings for batch plugins
- Extended tab functions (thanks to @cornytrace)
- Settings Editor
- Icons for high DPI displays
- Crash on exit fixed for Linux with Qt 5.7.1
- Updates (Windows)
	- Qt 5.5.1 -> 5.7.0
	- OpenCV 3.1 -> 3.2

nomacs 3.4.0
============
- Batch UI reworked
- Batch Profiles added
- Cropping to metadata
- RGB to Gray improved
- Crash on delete fixed
- Slow thumbnail rendering fixed
- Start-up time improved
- RAW/PSD orientation fixed

nomacs 3.2.0
============
- Plugin framework redesigned
- New preferences
- Undo & History dock added
- Statusbar improved (e.g. zoom level)
- All Icons are SVG (UHD monitors)
- Compression added to Batch
- Image transitions extended (swipe)
- Logging added
- Recent files cleaned
